[tool.poetry]
name = "rvclib"
version = "0.1.1"
description = "library to use rvc"
authors = ["Emmanuel Schmidbauer <eschmidbauer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
numpy = "1.26.4"
requests = "2.32.3"
tqdm = "4.67.1"
wget = "3.2"
ffmpeg-python = "0.2.0"
faiss-cpu = "1.9.0.post1"
librosa = "0.10.2.post1"
scipy = "1.15.0"
soundfile = "0.13.0"
noisereduce = "3.0.3"
pedalboard = "0.9.16"
stftpitchshift = "2.0"
omegaconf = "2.3.0"
numba = "0.60.0"
torch = "2.3.1"
torchaudio = "2.3.1"
torchvision = "0.18.1"
torchcrepe = "0.0.23"
torchfcpe = "0.0.4"
einops = "0.8.0"
libf0 = "1.0.2"
transformers = "4.47.1"
samplerate = "0.2.1"
six = "1.17.0"
pydub = "0.25.1"
onnx = "1.17.0"
onnx2torch = "1.5.15"
onnxruntime = "1.20.1"
julius = "0.2.7"
diffq = "0.2.4"
ml_collections = "1.0.0"
resampy = "0.4.3"
beartype = "0.19.0"
rotary-embedding-torch = "0.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
